src/App.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Kode Mono", monospace;
  font-optical-sizing: auto;
  font-style: normal;

}

.root {
  width: 100vw;
  height: 100vh;
  background-color: black;

}

.header {
  color: yellow;
  font-family: "Silkscreen", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.password-field {
  border: 1px solid rgb(0, 240, 255);
  height: 30px;
  width: 60%;
  border-radius: 2px;
  color: white;
  overflow: hidden;
  padding: 0 5px;
}

.field {
  display: flex;
}

.buttons {
  gap: 20px;
  display: flex;

}

.parts {
  width: 50%;
}

.buttons button {
  background-color: yellow;
  padding: 5px;

}

.buttons button:hover {
  border: none;
  outline: none;
}

.buttons button:active {
  border: none;
  outline: none;
}

/* Range - thumb and track */
input[type=range] {
  height: 23px;
  -webkit-appearance: none;
  margin: 10px 0;
  width: 60%;
}

input[type=range]:focus {
  outline: none;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 2px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 0px 0px 0px #000000;
  background: rgb(0, 240, 255);
  border-radius: 3px;
  border: 0px solid #000000;
}

input[type=range]::-webkit-slider-thumb {
  box-shadow: 0px 0px 0px #000000;
  border: 1px solid rgb(0, 240, 255);
  height: 16px;
  width: 16px;
  border-radius: 18px;
  background: rgb(0, 240, 255);
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -7px;
}

input[type=range]:focus::-webkit-slider-runnable-track {
  background: rgb(0, 240, 255);
}

input[type=range]::-moz-range-track {
  width: 100%;
  height: 3px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 0px 0px 0px #000000;
  background: rgb(0, 240, 255);
  border-radius: 3px;
  border: 0px solid #000000;
}

input[type=range]::-moz-range-thumb {
  box-shadow: 0px 0px 0px #000000;
  border: 1px solid rgb(0, 240, 255);
  height: 16px;
  width: 16px;
  border-radius: 18px;
  background: #A1D0FF;
  cursor: pointer;
}

input[type=range]::-ms-track {
  width: 100%;
  height: 3px;
  cursor: pointer;
  animate: 0.2s;
  background: transparent;
  border-color: transparent;
  color: transparent;
}

input[type=range]::-ms-fill-lower {
  background: rgb(0, 240, 255);
  border: 0px solid #000000;
  border-radius: 6px;
  box-shadow: 0px 0px 0px #000000;
}

input[type=range]::-ms-fill-upper {
  background: rgb(0, 240, 255);
  border: 0px solid #000000;
  border-radius: 6px;
  box-shadow: 0px 0px 0px #000000;
}

input[type=range]::-ms-thumb {
  margin-top: 1px;
  box-shadow: 0px 0px 0px #000000;
  border: 1px solid rgb(0, 240, 255);
  height: 16px;
  width: 16px;
  border-radius: 18px;
  background: #A1D0FF;
  cursor: pointer;
}

input[type=range]:focus::-ms-fill-lower {
  background: rgb(0, 240, 255);
}

input[type=range]:focus::-ms-fill-upper {
  background: rgb(0, 240, 255);
}


.password-length {
  color: white;
}

.password-specifications {
  color: white;
  /* grid display with 2 columns */
  display: grid;
  row-gap: 15px;
  grid-template-columns: 1fr 1fr;

}

input[type="checkbox"] {
  appearance: none;
  width: 15px;
  height: 15px;
  border: 1px solid yellow;
  cursor: pointer;
  margin-right: 5px;
}

input[type="checkbox"]:hover {
  border: 2px solid yellow;
  background: yellow;
}

input[type="checkbox"]:checked {
  background: yellow;
}

label:hover {
  cursor: pointer;
}

/* Part2 */

li,
h2,
.clear {
  color: white;
}

.clear {
  text-align: center;
  width: max-content;
  cursor: pointer;
}

.delete-icon {
  color: yellow;
}

.footer p {
  color: rgb(0, 240, 255);
}

.footer a {
  color: yellow;
  text-decoration: none;
}

.footer a:hover {
  text-decoration: underline;
  color: yellow;
}

.copy {
  cursor: pointer;
  color: yellow;
}

@media screen and (max-width: 600px) {
  .field {
    flex-direction: column;
    /* align-items: center; */
  }

  .parts {
    width: 80%;
  }

  .password-field {
    width: 100%;
  }

  .header {
    text-align: start;
    display: grid;
    row-gap: 10px;
    place-content: center;
  }

  .buttons {
    display: flex;
    width: 50%;
    justify-content: space-between;
  }
  .footer{
    display: grid;
    place-content: center;
    width: 80%;
    margin: 0 auto;
  }
}

